# learning-rust

automated_tests/: Cargo.toml
automated_tests/src/: lib.rs
automated_tests/tests/: integration_test.rs
automated_tests/tests/common/: mod.rs
branches/: Cargo.toml
branches/src/: main.rs
cargo_in_depth/: Cargo.toml  notes.md
cargo_in_depth/src/: lib.rs
collections/: Cargo.toml
collections/src/: hashmaps.rs  main.rs  string.rs  vector.rs
concurrency/: Cargo.toml
concurrency/src/: lib.rs  main.rs
data_structures/: Cargo.toml  struct
data_structures/src/: main.rs  struct.rs
enum_pattern_matching/: Cargo.toml
enum_pattern_matching/src/: main2.rs  main3.rs  main4.rs
error_handling/: Cargo.toml  hello.txt
error_handling/src/: main.rs
functional_features/: Cargo.toml
functional_features/src/: lib.rs  main.rs
functions/: Cargo.toml
functions/src/: main.rs
generics_and_lifetimes/: Cargo.toml  lifetimes
generics_and_lifetimes/src/: lifetimes.rs  main.rs  main_2.rs
guessing_game/: Cargo.toml  main
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml
hello_world/: hello
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
modules/src/: lib.rs
ownership/: Cargo.toml
ownership/src/: dangling_references.rs  main.rs  main5.rs  main6.rs  slice_type.rs
restaurant/: Cargo.toml
restaurant/src/: main.rs
smart_pointers/: Cargo.toml
smart_pointers/src/: lib.rs  lib2.rs  lib3.rs  main.rs
