[package]
name = "cargo_in_depth"
version = "0.1.0"
authors = ["monadplus <arnauabella@gmail.com>"]
edition = "2018"

# overriding default settings
[profile.dev]
opt-level = 1
overflow-checks = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
